--- a/BamChatBot/BamChatBot/BamChatBot.csproj
+++ b/BamChatBot/BamChatBot/BamChatBot.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.Bot.Builder.AI.Luis" Version="4.6.2" />
     <PackageReference Include="Microsoft.Bot.Builder.Dialogs" Version="4.6.2" />
     <PackageReference Include="Microsoft.Bot.Builder.Integration.AspNet.Core" Version="4.6.2" />
+    <PackageReference Include="Microsoft.Office.Interop.Outlook" Version="15.0.4797.1003" />
     <PackageReference Include="Microsoft.Recognizers.Text.DataTypes.TimexExpression" Version="1.1.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
   </ItemGroup>
