--- a/BamChatBot/BamChatBot/appsettings.json
+++ b/BamChatBot/BamChatBot/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MicrosoftAppId": "49953333-db29-4ce9-9fce-29c404585304",
-  "MicrosoftAppPassword": "azureBAMCh@tbot",
+  "MicrosoftAppPassword": "4_-2C~c7W9t31wvgWWLTwiNK~JPyWs-zy9",
   "LuisAppId": "bc9ee428-d1c0-41a3-ab6b-c531da80b999",
   "LuisAPIKey": "263c007746ed4f33a00d29a719fbe69f",
   "LuisAPIHostName": "westus.api.cognitive.microsoft.com"
